--- a/src/Makefile
+++ b/src/Makefile
@@ -36,7 +36,7 @@ JAR=jar
 OPTIONS =  -Wno-deprecated -O3
 
 polyunphased: unphased.cpp UnphasedOptions.o LinkageData.o NuclearFamily.o Haplotype.o UnphasedAnalysis.o UnphasedAnalysisModels.o UnphasedAnalysisExploratory.o UnphasedAnalysisLikelihood.o UnphasedAnalysisOutput.o matinv.o pvalues.o asran.o UnphasedScore.o UnphasedScoreFamily.o UnphasedScoreUnrelated.o 
-	$(CCC) -o unphased unphased.cpp UnphasedOptions.o LinkageData.o NuclearFamily.o Haplotype.o UnphasedAnalysis.o UnphasedAnalysisModels.o UnphasedAnalysisExploratory.o UnphasedAnalysisLikelihood.o UnphasedAnalysisOutput.o UnphasedScore.o UnphasedScoreFamily.o UnphasedScoreUnrelated.o pvalues.o asran.o matinv.o $(SYNTAX) $(OPTIONS)
+	$(CCC) -o polyunphased unphased.cpp UnphasedOptions.o LinkageData.o NuclearFamily.o Haplotype.o UnphasedAnalysis.o UnphasedAnalysisModels.o UnphasedAnalysisExploratory.o UnphasedAnalysisLikelihood.o UnphasedAnalysisOutput.o UnphasedScore.o UnphasedScoreFamily.o UnphasedScoreUnrelated.o pvalues.o asran.o matinv.o $(SYNTAX) $(OPTIONS)
 
 UnphasedOptions.o: UnphasedOptions.cpp UnphasedOptions.h Options.h
 	$(CCC) -c UnphasedOptions.cpp $(SYNTAX) $(OPTIONS)
