--- a/src/Makefile
+++ b/src/Makefile
@@ -36,8 +36,8 @@ JAR=jar
 ###OPTIONS =  -Wno-deprecated -O3
 OPTIONS =  -Wno-deprecated -g
 
-polyunphased: unphased.cpp UnphasedOptions.o LinkageData.o NuclearFamily.o Haplotype.o UnphasedAnalysis.o UnphasedAnalysisModels.o UnphasedAnalysisExploratory.o UnphasedAnalysisLikelihood.o UnphasedAnalysisOutput.o matinv.o pvalues.o asran.o UnphasedScore.o UnphasedScoreFamily.o UnphasedScoreUnrelated.o 
-	$(CCC) -o polyunphased unphased.cpp UnphasedOptions.o LinkageData.o NuclearFamily.o Haplotype.o UnphasedAnalysis.o UnphasedAnalysisModels.o UnphasedAnalysisExploratory.o UnphasedAnalysisLikelihood.o UnphasedAnalysisOutput.o UnphasedScore.o UnphasedScoreFamily.o UnphasedScoreUnrelated.o pvalues.o asran.o matinv.o $(SYNTAX) $(OPTIONS)
+polyunphased: polyunphased.cpp UnphasedOptions.o LinkageData.o NuclearFamily.o Haplotype.o UnphasedAnalysis.o UnphasedAnalysisModels.o UnphasedAnalysisExploratory.o UnphasedAnalysisLikelihood.o UnphasedAnalysisOutput.o matinv.o pvalues.o asran.o UnphasedScore.o UnphasedScoreFamily.o UnphasedScoreUnrelated.o 
+	$(CCC) -o polyunphased polyunphased.cpp UnphasedOptions.o LinkageData.o NuclearFamily.o Haplotype.o UnphasedAnalysis.o UnphasedAnalysisModels.o UnphasedAnalysisExploratory.o UnphasedAnalysisLikelihood.o UnphasedAnalysisOutput.o UnphasedScore.o UnphasedScoreFamily.o UnphasedScoreUnrelated.o pvalues.o asran.o matinv.o $(SYNTAX) $(OPTIONS)
 
 UnphasedOptions.o: UnphasedOptions.cpp UnphasedOptions.h Options.h
 	$(CCC) -c UnphasedOptions.cpp $(SYNTAX) $(OPTIONS)
